--- a/Final Documentation/Design/Design.tex
+++ b/Final Documentation/Design/Design.tex
@@ -25,7 +25,7 @@ This example is based on a new concept and hence contains rules which are comple
 \paragraph{Planning a Kitchen}
 This prototype contains two views, layout view (depicts a grid structure containing blocks) and a symbolic view (empty space which depicts the UI for a kitchen). The symbolic view has more functionalities such as creating/deleting/moving a kitchen item, etc. out of which only a few will be available in the layout view. The user will create/delete/move a kitchen item, i.e., sink/table in the symbolic view and if changes are compatible with a bx then the items will be reflected in the layout view with colored blocks and vice-versa.
 
-Any user can relate to this example very well as everybody is familiar with a kitchen and its environment. This example involves no technical details and simple rules as the environment is a part of day to day life and hence users will be able to relate to the learning concepts easily. As an integral part of this example, user interactivity involves shapes, colors, drag, and drop, etc. which creates interest for a user.
+Any user can relate to this example very well as everybody is familiar with a kitchen and its environment. This example involves no technical details and simple rules as the environment is a part of the day to day life and hence users will be able to relate to the learning concepts easily. As an integral part of this example, user interactivity involves shapes, colors, drag, and drop, etc. which creates interest for a user.
 
 \paragraph{Families to Persons}
 The concept of this example is taken from the example \emph{FamilyToPersons} located in the bx examples repository~\cite{bx-examples}. It contains two views, a Families view and a Persons view. The Families view contains many families and each family consist of members. The Persons view contains persons (corresponding to the members of each family). The addition of a new person to the Persons view will be reflected in the Families view and vice-versa. Surnames don't have to be unique. If a new person could be placed in multiple families the synchronizer can simply ask which one is to be chosen (user interaction).
@@ -35,7 +35,7 @@ The potential users are not familiar with this example. However, this example is
 \subsubsection{Selection}\label{subsubsec:exampleselection}
 Selecting an example for the demonstrator was not random, rather I have taken many factors into considerations before choosing the final one. It was a very important decision, as the selection of the example and its implementation will directly affect the research question \textit{RQ 4} specified in Section \ref{subsec:probstmt} and requirements \textit{NR2} (fun to play), \textit{NR3} (simple example) described in Section \ref{subsec:nonfunctionalreq}.
 
-Hence by taking into account all these factors, I and my supervisor constructed a few evaluation criteria (referred to as \textbf{EC}), as due to time constraint, we could not ask potential users or conduct an experiment to find out what people will prefer. Then, we evaluated each example on the basis of the evaluation criteria for the selection of the most suitable example. The evaluation criteria that we have considered are listed below:
+Hence, by taking into account all these factors, I and my supervisor constructed a few evaluation criteria (referred to as \textbf{EC}), as due to time constraint, we could not ask potential users or conduct an experiment to find out what people will prefer. Then, I evaluated each example on the basis of the evaluation criteria for the selection of the most suitable example. The evaluation criteria that I have considered are listed below:
 \begin{description}
 	\item [EC 1:] User should be familiar with the example.
 	\item [EC 2:] Example should be simple and intuitive with a minimum of technical details.
@@ -73,7 +73,7 @@ Table~\ref{tab:comparison_examples} shows the comparison of the examples based o
 Next step in the design process was the selection of a bx tool which takes care of the bx part of the demonstrator and upon which the entire framework of the demonstrator will be constructed. Again, it was a very important decision, as the selection of the bx tool and the implementation on the top of it will directly affect the research questions \textit{RQ 1}, \textit{RQ 2}  specified in Section \ref{subsec:probstmt}.
 
 My gathered information during the case study phase led the foundation for the selection process. I further investigated on the existing bx tools from the point of view of practical application and usage of these tools in terms of building software. Even after a significant amount of work has been done by developers community and bx community, the main problems were revolving around the conceptual, practical challenges associated with using bx, and tool/technology in building software systems and absence of benchmarks for comparison of complete bx solutions~\cite{bx-theoryandappl}.
-To focus particularly on these issues, bx-community had conducted a series of technical workshops at relevant conferences and organized week-long intensive research seminars~\cite{bx-theoryandappl}. Some of the main outcomes of these seminars were (i) focus on the need of benchmarks and further categorizing them into functional and non-functional ones, (ii) software tool support for bx was shown in terms of demos which includes tool like eMoflon, Echo etc.
+To focus particularly on these issues, bx-community had conducted a series of technical workshops at relevant conferences and organized week-long intensive research seminars~\cite{bx-theoryandappl}. Some main outcomes of these seminars were (i) focus on the need of benchmarks and further categorizing them into functional and non-functional ones, (ii) software tool support for bx was shown in terms of demos which includes tool like eMoflon, Echo etc.
 
 The outcome of the seminars led me to concentrate and analyze bx tools like eMoflon, Echo, BIGUL. Also, I came across the benchmark \cite{benchmarx} \cite{benchmarx-reload}, the first non-trivial benchmark where Anjorin et al. provide a practical framework to compare and evaluate three bx tools. After analyzing these tools, benchmarks and taking into consideration the research questions and requirements, I have finally chosen \textit{eMoflon} as the bx tool to handle the bx part of the demonstrator. Following were the driving factors for the selection of the bx tool:
 \begin{itemize}
@@ -90,7 +90,7 @@ I decided to build a web application to address the requirements \textit{NR1} (m
 
 Web application development has evolved from single page design to very complex layering structures since the beginning of World Wide Web. Many design patterns \cite{designpattern} \cite{designpattern-notes} consisting of different technologies and programming languages were proposed, adopted and implemented to address the demands of customers and users on the web. With the rapid changes occurring on World Wide Web, some technologies are becoming obsolete and losing demand. Nowadays, the main trend appears to be improving user interaction and allowing developers to build powerful web applications rapidly.
 
-I analyzed some design patterns and commonly used architecture designs by working on a few Proof of Concepts (PoC). The main goal of my thesis is to design and implement a demonstrator based on a bx-tool as described in Section \ref{subsec:contribution} and prior to this stage, I have already selected \textit{eMoflon} as my bx-tool in Section \ref{subsec:bxtoolselection}. The main idea was thus to check the feasibility of the architecture and the data flow within its components on top of the interface provided by the \textit{Benchmarx} framework (proposed by Anjorin et al. \cite{benchmarx-reload}) to access the bx-tool. While working on the PoCs, I encountered a few problems such as maintainability and reusability of code, dependencies of components etc. To avoid these problems and to address the requirement \textit{NREQ3} described in Section \ref{subsec:functionalreq}, I finally chose the Model-View-Controller (referred as \textbf{MVC} from now on) architecture for my application framework. Following were the driving factors for the selection of the MVC architecture \cite{designpattern-notes} \cite{designpattern-headfirst}:
+I analyzed some design patterns and commonly used architecture designs by working on a few Proof of Concepts (PoC). The main goal of my thesis is to design and implement a demonstrator based on a bx-tool as described in Section \ref{subsec:contribution} and prior to this stage, I have already selected \textit{eMoflon} as my bx-tool in Section \ref{subsec:bxtoolselection}. The main idea was thus to check the feasibility of the architecture and the data flow within its components on top of the interface provided by the \textit{Benchmarx} framework (proposed by Anjorin et al. \cite{benchmarx-reload}) to access the bx-tool. While working on the PoCs, I encountered a few problems such as maintainability and reusability of code, dependencies of components etc. To avoid these problems and to address the requirement \textit{NREQ3} described in Section \ref{subsec:functionalreq}, I finally chose one variant of the Model-View-Controller (referred as \textbf{MVC} from now on) architecture for my application framework. Following were the driving factors for the selection of the MVC architecture \cite{designpattern-notes} \cite{designpattern-headfirst}:
 \begin{itemize}
 	\item {it differentiates the layers of a model, view, and controller for the re-usability and easy maintenance of code.}
 	\item {it splits responsibilities into three main roles which allow developers to work independently without interfering in each other's work and for more efficient collaboration.}
@@ -102,8 +102,8 @@ I analyzed some design patterns and commonly used architecture designs by workin
 This section provides an overview of the entire architecture followed by the description of each component e.g., Model, View, and Controller in detail.
 
 \subsubsection{Overview}\label{subsubsec:design_overview}
-The architecture has three components, Model, View and Controller to signify the MVC pattern. Figure~\ref{fig:Component_Diagram} describes the high-level architecture of the Demon-BX tool in the form of a component diagram.
-
+The architecture has three components, Model, View and Controller to signify the MVC pattern. Figure~\ref{fig:Component_Diagram} describes the high-level architecture of the demon-bx tool in the form of a component diagram.
+       
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=1\textwidth]{figures/Component_Diagram-HighLevel}
@@ -139,7 +139,7 @@ The \texttt{controller} component acts as a bridge between view and model and ha
 \end{figure}
 
 \paragraph{Request-Response Cycle} 
-The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-HighLevel(init)}, Figure~\ref{fig:Sequence_Diagram-HighLevel(cont-false)}, Figure~\ref{fig:Sequence_Diagram-HighLevel(cont-true)} illustrate a high-level overview of the communication process between all three components in different stages.
+The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-HighLevel(init)}, Figure~\ref{fig:Sequence_Diagram-HighLevel(cont-false)}, and Figure~\ref{fig:Sequence_Diagram-HighLevel(cont-true)} illustrate a high-level overview of the communication process between all three components in different stages.
 \begin{enumerate}
 	\item {\textbf{Load}: The user loads the application on a browser. The view generates a unique user id (GUID) and sends it to the controller as a request in the form of JSON data. After accepting the request, the controller stores the GUID and sends the initialize signal to the model for initializing the bx-tool. After tool gets initialized, the controller requests for the newly generated example specific models, converts it to the user data, and sends the response back to the view in the form of JSON data. The view processes the data and the final response is loaded into the browser. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-HighLevel(init)}.}
 	
@@ -194,14 +194,14 @@ Figure~\ref{fig:Grid_MetaModel} describes the structure of the \texttt{GridLangu
 \end{figure}
 
 \paragraph{Workflow}
-The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}, Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}, and Figure~\ref{fig:Sequence_Diagram-Model(cont-true)} illustrate the workflow of the Demon-BX tool from the point of view of the model component in different stages. As the model component only communicates with the controller, these sequence diagrams show the communication process between the controller and the sub-components of the model, \texttt{BX Tool Wrapper} and the bx tool i.e., \texttt{eMoflon}.
+The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}, Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}, and Figure~\ref{fig:Sequence_Diagram-Model(cont-true)} illustrate the workflow of the demon-bx tool from the point of view of the model component in different stages. As the model component only communicates with the controller, these sequence diagrams show the communication process between the controller and the sub-components of the model, \texttt{BX Tool Wrapper} and the bx tool i.e., \texttt{eMoflon}.
 \begin{enumerate}
 	\item {\textbf{Load}: During first time load of the application, the controller instantiates all the wrapper classes and calls the appropriate method (\texttt{initiateSynchronisationDialogue()}) to initialize the bx tool after receiving the initialization command from the view. After receiving the request, bx tool wrapper class sends the initialization signal (\texttt{setSrc(), integrateForward()}) to the bx tool i.e., eMoflon and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(init)}.}
 	
-	\item {\textbf{Delta Propagation (without continuation)}: After converting the delta sent from the view into example specific data, controller calls the appropriate method (\texttt{performAnd PropagateTargetEdit(SrcData)}) of the wrapper class e.g., propagate delta into source model. Accordingly, wrapper class initiate forward synchronization 
-	(\texttt{setChange Src(SrcData), integrateForward()}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed and the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in the upper part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}.}
+	\item {\textbf{Delta Propagation (without continuation)}: After converting the delta sent from the view into example specific data, the controller calls the appropriate method (\texttt{performAnd PropagateTargetEdit(SrcData)}) of the wrapper class e.g., propagate delta into source model. Accordingly, wrapper class initiate forward synchronization 
+	(\texttt{setChange Src(SrcData), integrateForward()}) and sends the delta to the bx tool i.e., eMoflon. Here I have described only the forward synchronization. However, the process for the backward synchronization goes analogously. The bx tool processes the delta taking into account all the associated transformation rules. During processing of the data, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation does not exist, processing is completed and the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(cont-false)}.}
 	
-	\item {\textbf{Delta Propagation (with continuation)}: While the bx tool i.e., eMoflon processes the delta, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation exists, the controller requests (\texttt{getChoices()}) for the matching rules from the bx tool i.e., eMoflon through the bx tool wrapper class. The wrapper class requests, receives the matching rules from the bx tool, and send it back to the controller. On receiving the user's decision, the controller sends resume data processing signal (\texttt{continueSynchronisation(userChoice)}) along with the user's decision to the bx tool through the wrapper class. Afterward, the bx tool completes the data processing with the user's decision. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in the lower part of the conditional case in Figure~\ref{fig:Sequence_Diagram-Model(cont-true)}.}
+	\item {\textbf{Delta Propagation (with continuation)}: While the bx tool i.e., eMoflon processes the delta, the controller checks if satisfiability of more than one transformation rule exists (\texttt{hasContinuation()}) for the processed data i.e., continuation. If continuation exists, the controller requests (\texttt{getChoices()}) for the matching rules from the bx tool i.e., eMoflon through the bx tool wrapper class. The wrapper class requests, receives the matching rules from the bx tool, and send it back to the controller. On receiving the user's decision, the controller sends resume data processing signal (\texttt{continueSynchronisation(userChoice)}) along with the user's decision to the bx tool through the wrapper class. Afterward, the bx tool completes the data processing with the user's decision. Then, the controller requests (\texttt{getSourceModel(), getTargetModel()}) for the newly generated models through the bx tool wrapper class. The wrapper class requests (\texttt{getSrc(), getTrg()}) for the tool specific models from the bx tool, receives it, and send it back to the controller. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-Model(cont-true)}.}
 \end{enumerate}
 
 For better understanding and to avoid complexity, here I have described the delta propagation process for only a single delta. However, the user can generate multiple deltas as well. In that case, after receiving all the deltas from the view, the controller converts them to example specific data. Then, the controller handles them atomically (one by one). Hence, the above described delta propagation process (with or without continuation) is executed for each delta until the data processing is complete by the bx tool. 
@@ -231,7 +231,7 @@ The view always receives the presentation data as a response from the controller
 
 Figure~\ref{fig:ClassDia_UI-Models} shows the structure of the presentation data in the form of a class diagram. It consists of classes like \texttt{Canvas}, \texttt{Layout}, \texttt{Workspace}, \texttt{PresentationData}, \texttt{UIGroup}, \texttt{Element}, \texttt{Rectangle}, and \texttt{ChangeData}. \texttt{Canvas} is the parent class for \texttt{Layout} and \texttt{Workspace}. It has attributes \textit{height} and \textit{width} to describe its size representing the views. The \texttt{Workspace} represents the symbolic view in the user interface and contains zero or more objects (elements). The \texttt{Layout} represents the layout view in the user interface and contains zero or more blocks and groups. \texttt{UIGroup} has attribute \textit{fillColor} to uniquely identified as a new group on UI and contains zero or more blocks. \texttt{Rectangle} has attributes \textit{id}, \textit{xIndex}, \textit{yIndex}, and \textit{fillColor} to deal with the UI related actions. The \texttt{Element} has attributes \textit{id}, \textit{type}, \textit{xPos}, \textit{yPos}, and \textit{fillColor}. \texttt{PresentationData} is the class which carries all the information related to UI. After receiving the response from the bx tool, the controller converts the bx tool specific models into \texttt{PresentationData} and send it to view for visualization. It has an attribute userChoices and contains a layout, a workspace, and a set of deltas wrapped inside a \texttt{ChangeData} class.
 
-While user interacts with the demonstrator, actions i.e., changes performed by the user in the UI are captured in the form of \texttt{delta}s and packaged in a \texttt{ChangeData} object. The symbolic view allows three actions i.e., creation of a new item, deletion of an item and movement of an item. Whereas, the layout view allows two actions i.e., creation of a new group and deletion of a group. Hence, \texttt{ChangeData} class tracks all of these five actions separately. \texttt{ChangeData} class shown in Figure~\ref{fig:ClassDia_UI-Models} contains itemCreated, itemDeleted and ItemMoved as a list of \texttt{Element}s to capture creation, deletion, and movement of an item respectively in the symbolic view. It also contains groupCreated and groupDeleted as a list of \texttt{UIGroup}s to capture creation and deletion of a group respectively in the layout view. Also, these \texttt{delta}s are captured atomically so that they can be executed independently by the bx tool.
+While user interacts with the demonstrator, actions i.e., changes performed by the user in the UI are captured in the form of \texttt{delta}s and packaged in a \texttt{ChangeData} object. The symbolic view allows three actions i.e., creation of a new item, deletion of an item, and movement of an item. Whereas, the layout view allows two actions i.e., creation of a new group and deletion of a group. Hence, \texttt{ChangeData} class tracks all of these five actions separately. \texttt{ChangeData} class shown in Figure~\ref{fig:ClassDia_UI-Models} contains itemCreated, itemDeleted, and ItemMoved as a list of \texttt{Element}s to capture creation, deletion, and movement of an item respectively in the symbolic view. It also contains groupCreated and groupDeleted as a list of \texttt{UIGroup}s to capture creation and deletion of a group respectively in the layout view. Also, these \texttt{delta}s are captured atomically so that they can be executed independently by the bx tool.
 
 \begin{figure}
 	\centering
@@ -255,7 +255,7 @@ While user interacts with the demonstrator, actions i.e., changes performed by t
 \end{figure}
 
 \paragraph{Workflow}
-The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-View(init)}, Figure~\ref{fig:Sequence_Diagram-View(cont-false)}, and Figure~\ref{fig:Sequence_Diagram-View(cont-true)} illustrate the workflow of the Demon-BX tool from the point of view of the view component in different stages. As the view component only communicates with the controller, these sequence diagrams show the communication process between the controller and the view only.
+The sequence diagrams shown in Figure~\ref{fig:Sequence_Diagram-View(init)}, Figure~\ref{fig:Sequence_Diagram-View(cont-false)}, and Figure~\ref{fig:Sequence_Diagram-View(cont-true)} illustrate the workflow of the demon-bx tool from the point of view of the view component in different stages. As the view component only communicates with the controller, these sequence diagrams show the communication process between the controller and the view only.
 
 \begin{enumerate}
 	\item {\textbf{Load}: To load the application, the user enters the complete URL on a web browser. As soon as the web page is loaded, the view generates a unique user id (GUID) for the current user and sends an initialization command (\texttt{init(GUID)}) for the bx tool i.e., eMoflon along with the GUID in the form of \texttt{JSON} data to the controller wrapped inside an \texttt{Ajax} call. In return, the view gets the \texttt{PresentationData} from the controller after the initialization of the bx tool. After getting the data, the view visualizes (\texttt{changeVisualize(PresentationData)}) them in two HTML canvas elements i.e., \texttt{Layout} and \texttt{Kitchen}. This entire process is shown in Figure~\ref{fig:Sequence_Diagram-View(init)}.}
@@ -280,7 +280,7 @@ Both the views represent a workspace area and its certain behavior. The symbolic
 
 For the symbolic view, I kept the \textit{Canvas} clean to represent an empty space where addition and manipulation of different objects can be done. As the user interface is meant to be example independent, the four sides of the \textit{Canvas} are "special" and can be interpreted in some way for a certain example to make things more interesting. For example, for the implementation of the example \textit{Planning a Kitchen}, the four sides represent four walls of a kitchen space inside which different kitchen objects such as sink, table, fridge etc. can be added. Also, to make the kitchen space more realistic, I have even added {\color{blue} water outlets} on the western wall and {\color{red} electrical fittings} on the northern wall so that the user can relate to it. For layout view, I have filled the \textit{Canvas} with grids/blocks. The layout view represents exact workspace space as shown in the symbolic view but, divided into blocks which restrict certain flexibility and functionality. Figure~\ref{fig:Layout_Kitchen} shows a sample of the symbolic view (Kitchen) and layout view (Layout).
 
-Next step was to handle the user interactions in the process of performing various task on both the views. In web development, javascript is the most used language for handling the user interactions and programming the behavior of web pages \cite{javascript}. Hence, I have analyzed a few canvas libraries available in market e.g., Fabric.js \cite{fabricjs}, Processing.js \cite{processingjs}, Pixi.js \cite{pixijs}  by working on a few Proof of Concepts (PoC). The main idea was to check the feasibility and support for interactivity to perform different user defined tasks on the \textit{Canvas}. Finally, I chose Fabric.js as my javascript library for handling the user interactions because of below factors \cite{fabricjs}:
+Next step was to handle the user interactions in the process of performing various task on both the views. In web development, javascript is the most used language for handling the user interactions and programming the behavior of web pages \cite{javascript}. Hence, I have analyzed a few canvas libraries available in market e.g., Fabric.js \cite{fabricjs}, Processing.js \cite{processingjs}, Pixi.js \cite{pixijs}  by working on a few Proof of Concepts (PoC). The main idea was to check the feasibility and support for interactivity to perform different user defined tasks on the \textit{Canvas}. Finally, I chose Fabric.js as my javascript library for handling the user interactions because of below factors~\cite{fabricjs}:
 \begin{itemize}
 	\item {It is good at displaying a large number of objects on the canvas.}
 	\item {It handles object manipulation such as, moving, rotating, resizing for any kind of object.}
@@ -292,7 +292,7 @@ Second task in the process of visualization was defining the user actions with r
 
 In the symbolic view, a user can perform addition, removal, and movement of any objects. A new object can be added and an already existing object can be moved or removed within the empty space available with the different mouse events. Every object is tracked on the basis of its position in the view and every change i.e., creation, deletion or movement of objects is captured inside a \texttt{delta} by the symbolic view and send it to the controller for further processing. For example, for the implementation of the example \textit{Planning a Kitchen}, a user can create, delete or move different kitchen objects such as sink, table, fridge etc. Also, to make the example more realistic, I have used similar images of the kitchen objects as shown in the right side canvas (kitchen) in Figure~\ref{fig:Layout_Kitchen}. 
 
-As the layout view is divided into blocks and offers fewer functionalities than the symbolic view, a user can perform only addition and removal of the objects. Hence, each object is represented in the form of a group, combining any number of block(s) arranged in vertical or in horizontal direction filled with a unique color everytime a new object is added. Every group is tracked on the basis of the block's position that it is consist of along with its color and every change i.e., addition or removal is captured inside a \texttt{delta} by the layout view and sent to the controller for further processing. For example, for the implementation of the example \textit{Planning a Kitchen}, the sink is represented by two horizontal blocks attached to one another and filled with {\color{blue} blue} color as shown in the left side canvas (layout) in Figure~\ref{fig:Layout_Kitchen}. 
+As the layout view is divided into blocks and offers fewer functionalities than the symbolic view, a user can perform only addition and removal of the objects. Hence, each object is represented in the form of a group, combining any number of block(s) arranged in vertical or in horizontal direction filled with a unique color every time a new object is added. Every group is tracked on the basis of the block's position that it is consist of along with its color and every change i.e., addition or removal is captured inside a \texttt{delta} by the layout view and sent to the controller for further processing. For example, for the implementation of the example \textit{Planning a Kitchen}, the sink is represented by two horizontal blocks attached to one another and filled with {\color{blue} blue} color as shown in the left side canvas (layout) in Figure~\ref{fig:Layout_Kitchen}. 
 
 After the changes are done on either view, to see the effect on the other, the user can click on the synchronization button and both the views will be updated.
  
@@ -338,7 +338,7 @@ In my application, the servlet is strongly coupled with an example specific adap
 \paragraph{Workflow}
 Figure~\ref{fig:Sequence_Diagram-Controller(init)}, 
 Figure~\ref{fig:Sequence_Diagram-Controller(cont-false)},
-and Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)} illustrate the workflow of the Demon-BX tool from the point of view of the controller component in different stages. As the controller component communicates with both the view and model, these sequence diagrams show the communication process between the view, model and the sub-components of the controller, \texttt{Servlet} and the \texttt{KitchenAdapter}.
+and Figure~\ref{fig:Sequence_Diagram-Controller(cont-true)} illustrate the workflow of the demon-bx tool from the point of view of the controller component in different stages. As the controller component communicates with both the view and model, these sequence diagrams show the communication process between the view, model and the sub-components of the controller, \texttt{Servlet} and the \texttt{KitchenAdapter}.
 
 \begin{enumerate}
 	\item {\textbf{Load}: During first time load of the application, the servlet receives an initialization command (\texttt{init(GUID)}) from the view along with the newly generated GUID for the user in the form of \texttt{JSON} data wrapped inside an \texttt{Ajax} call. After receiving the request, the servlet creates a new instance of the adapter and stores the GUID. Then, the servlet forwards the initialization request (\texttt{initeMoflonTool()}) to the adapter. The adapter instantiates the bx tool i.e., eMoflon tool (\texttt{initiateSynchronisationDialogue()}) and the tool gets initialized by creating the instances of the \texttt{Source} and \texttt{Target} models. Afterward, servlet requests 
