--- a/Final Documentation/Evaluation/Evaluation.tex
+++ b/Final Documentation/Evaluation/Evaluation.tex
@@ -4,7 +4,7 @@ Figure~\ref{fig:Evaluation_Phases} shows the phases of the entire evaluation pro
 
 The aim of this chapter is as follows: 
 
-"Analyse the outcome of the usage of an interactive demonstrator for the purpose of evaluation with respect to the user from the point of view of the researcher in the context of teaching the basic concepts of bidirectional transformation (bx) and making them understandable and accessible."
+"Analyze the outcome of the usage of an interactive demonstrator for the purpose of evaluation with respect to the user from the point of view of the researcher in the context of teaching the basic concepts of bidirectional transformation (bx) and making them understandable and accessible."
 
 \subsection{Goals}\label{subsec:goals}  
 In any research, there could be many cases and each case could focus on a number of different research questions, each of which leads to a different direction in developing solution strategies~\cite{semethods}. Hence, for any evaluation process, most important thing are selecting cases that are most relevant to the research and narrowing down the research questions only associated with the exact problems in hand. 
@@ -68,7 +68,7 @@ This section explains the entire planning phase in detail. In this phase, I have
 As the context of the experiment is mainly focussed only on the computer science area, it will be conducted on a group of masters' student of computer science branch at Paderborn University. The participants are chosen based on convenience, i.e. the participants are the students taking a similar course.
 
 \subsubsection{Hypotheses}\label{subsubsec:hypotheses}
-Formulating hypotheses formally state that what is going to be evaluated in the experiment. I have constructed my hypotheses focussing on the research questions \textbf{RQ 3.1}, \textbf{RQ 4.1}, and  \textbf{RQ 4.2} as described in Section \ref{subsec:goals}. Following are the hypotheses I have chosen to focus in my experiment:\\
+Formulating hypotheses formally state that what is going to be evaluated in the experiment. I have constructed my hypotheses focussing on the research questions \textbf{RQ 3.1}, \textbf{RQ 4.1}, and  \textbf{RQ 4.2} as described in Section \ref{subsec:goals}. Following are the hypotheses I have chosen to focus on my experiment:\\
 
 \begin{description}
 	\item[Operational Hypotheses]
@@ -155,11 +155,11 @@ The Hypotheses described above helped in deciding the variables related to the e
 \end{table}
 
 \subsubsection{Learning Goals \& Questions}\label{subsubsec:questions}
-To investigate the research questions \textbf{RQ 3} and its sub-question \textbf{RQ 3.1}, I chose five bx concepts to evaluate the learning goals (referred to as \textbf{LG} from now on) for the experiment. These concepts are related to the basic fundamentals of bx described as follows:
+To investigate the research questions \textbf{RQ 3} and its sub-question \textbf{RQ 3.1}, I chose five bx concepts to evaluate the learning goals (referred to as \textbf{LG} from now on) for the experiment. These concepts are related to the fundamentals of bx described as follows:
 \begin{description}
 	\item[LG 1:] It is possible to avoid/minimize unnecessary information loss in bx.(?)
 	\item[LG 2:] Not all possible changes done in one model can be translated/synchronized into another model. (Synchronization is not total)
-	\item[LG 3:] Synchronisation is interactive. User interaction (or some other, possibly automated means) can be used to decide between multiple equally consistent results (to handle non-determinism: Synchronization is not always functional). 
+	\item[LG 3:] Synchronization is interactive. User interaction (or some other, possibly automated means) can be used to decide between multiple equally consistent results (to handle non-determinism: Synchronization is not always functional). 
 	\item[LG 4:] Undoing changes in one model to revert to a previous state does not necessarily imply that this can be reflected analogously in the other model. 
 	\item[LG 5:] Bx frameworks are not always state based but also can be delta based. The actual change performed can have an effect on synchronization results, even if the final result might appear to be exactly the same in both cases. 
 \end{description}
@@ -172,7 +172,7 @@ To evaluate these learning goals, I prepared five questions. Each question refer
 This section explains the entire experiment execution process in detail along with the preparation steps in the following subsections.
 
 \subsubsection{Preparation }\label{subsubsec:prep}
-To handle two separate groups i.e., control and treated and to conduct two separate tests i.e., pre-test and post-test on them, I had to prepare well before the experiment date. 
+To handle two separate groups i.e., control and treated and to conduct two separate tests i.e., pretest and posttest on them, I had to prepare well before the experiment date. 
 
 First, I prepared a two-minute video tutorial explaining some of the basic concepts of bx. Then, I prepared a set of questions relating each question to one learning goals and put them into two different forms i.e., pretest and posttest prepared with Google form~\cite{google-forms}. Google form provides a very simple way to prepare a responsive survey form with customized questions which can be shared easily to a mass audience online. Then to investigate the research questions \textbf{RQ 4} and its sub-questions \textbf{RQ 4.1} and \textbf{RQ 4.2}, I prepared the scenarios with the demonstrator to explain the learning goals in a simple way but with a concrete example. Finally, I prepared two different instruction sheets for both the groups explaining the steps they need to follow during the experiment.
 
@@ -185,18 +185,18 @@ The experiment was performed on a group of Master students attending a computer 
 
 \paragraph{No Interference} After that, they were asked to sit in two different areas according to their group allotment. The groups were spatially separated so that discussion between groups was almost impossible.
 
-These information sheets had all the appropriate links to the corresponding questionnaires with questions for the pre-test and post-test, demonstrator links with prepared scenarios for the treated group, and a different demonstrator link without scenarios for the control group.
+These information sheets had all the appropriate links to the corresponding questionnaires with questions for the pretest and posttest, demonstrator links with prepared scenarios for the treated group, and a different demonstrator link without scenarios for the control group.
 
-Firstly, all participants went through a two-minute video tutorial to establish basic concepts and notation used in the test questions. Then all participants were asked to take the pre-test. After finishing the pre-test, the students were asked to use the demonstrator links given to them and to work with it. The link given to the control group only had information on how to operate the demonstrator, while the treated group had access to scenarios chosen to support my learning goals. 
+Firstly, all participants went through a two-minute video tutorial to establish basic concepts and notation used in the test questions. Then all participants were asked to take the pretest. After finishing the pretest, the students were asked to use the demonstrator links given to them and to work with it. The link given to the control group only had information on how to operate the demonstrator, while the treated group had access to scenarios chosen to support my learning goals. 
 
-After playing with the demonstrator, both groups were asked to take the post-test. Post-test questions were exactly the same as pre-test questions but include some extra questions to get additional qualitative feedback about the demonstrator. The experiment was stopped exactly after 55 minutes.
+After playing with the demonstrator, both groups were asked to take the posttest. Posttest questions were exactly the same as pretest questions but include some extra questions to get additional qualitative feedback about the demonstrator. The experiment was stopped exactly after 55 minutes.
 
 \subsubsection{Data Validation}\label{subsubsec:datavalidation}
-Data were collected from 40 students. I stopped taking responses on Google forms i.e. pre-test and post-test forms from students exactly after 55 minutes. After the experiment, I checked the data entered by students in both the forms. Data from one student was removed, due to the fact that the data was regarded as invalid as the student could not finish both the test in the given time limit.
+Data were collected from 40 students. I stopped taking responses on Google forms i.e. pretest and posttest forms from students exactly after 55 minutes. After the experiment, I checked the data entered by students in both the forms. Data from one student was removed, due to the fact that the data was regarded as invalid as the student could not finish both the test in the given time limit.
 
 Hence, after removing one student out of the 40, I had data from 39 students for statistical analysis and interpretation of the results. Out of 39 students, 21 students were from the control group and remaining 18 were from treated group.
 
-Finally, based on unique identifiers (identifying the group and participant uniquely) derived for each participant, answers from pre-test and post-test were evaluated to get the results. 
+Finally, based on unique identifiers (identifying the group and participant uniquely) derived for each participant, answers from pretest and posttest were evaluated to get the results. 
 
 \subsection{Threats to Validity and Mitigation}\label{subsec:threats&mitigation}
 In my evaluation, I have focused on the validity analysis and threats given by Wohlin et al~\cite{expinse} and further explained by Feldt et al~\cite{validitythreatsinse}. 
@@ -208,17 +208,17 @@ This section describes all the threats that are associated with the entire evalu
 
 \medskip
 \noindent To measure improvement I am forced to perform arithmetic with ordinal values.
-This might be problematic as the difficulty of the test questions might not be equal. If, for example, one of the test questions is much more difficult than all the rest, then subtracting test scores and comparing improvements between groups is questionable. It can be possible that my test questions might not actually be suitable for checking if my learning goals have been reached and thus measuring the output from the test questions does not make any sense. Also, the students being generally unused to and confused by the notation used, it might be possible that they don't even understand the questions and thus cannot improve anything. To avoid these threats, I have carefully prepared the questions corresponding each one of them to a learning goal and tried to ensure that the difficulty level of all the questions is more or less the same. To make the notations more understandable, I have provided extra information about the notation used in the test questions in the two-minute video tutorial shown to all participants before the pre-test along with basic concepts.
+This might be problematic as the difficulty of the test questions might not be equal. If, for example, one of the test questions is much more difficult than all the rest, then subtracting test scores and comparing improvements between groups is questionable. It can be possible that my test questions might not actually be suitable for checking if my learning goals have been reached and thus measuring the output from the test questions does not make any sense. Also, the students being generally unused to and confused by the notation used, it might be possible that they don't even understand the questions and thus cannot improve anything. To avoid these threats, I have carefully prepared the questions corresponding each one of them to a learning goal and tried to ensure that the difficulty level of all the questions is more or less the same. To make the notations more understandable, I have provided extra information about the notation used in the test questions in the two-minute video tutorial shown to all participants before the pretest along with basic bx concepts.
 
 \emph{Do the groups (control and treated) involved in the experiment equally balanced to have a positive effect on the outcome I measure?}
 
 \medskip
-\noindent It might be possible that students of equal caliber are sitting together or might have a discussion between the test to have a negative effect on the results. Hence to avoid that, I have randomly selected students for control and treated group by giving them instruction sheets randomly while entering the class and making them sit in two separate groups apart from each other.
+\noindent It might be possible that students of equal caliber are sitting together or might have a discussion between the test to have a negative effect on the results. Hence, to avoid that, I have randomly selected students for control and treated group by giving them instruction sheets randomly while entering the class and making them sit in two separate groups apart from each other.
 
 \emph{Does the formula I used for the result calculation produce statistically significant data? Can I draw conclusions based on the data?}
 
 \medskip
-\noindent It can be possible that the formula that I have used to calculate the result of the pretest or posttest taking the correctness and certainty into account or the improvement of the posttest compared to the pretest might not produce the exact significant data for further statistical analysis and can affect the final outcome. For example, now I am subtracting pretest result from posttest result and then dividing it by two for normalization to calculate the improvement. But, there might be other ways to define what improvement is relative to the pretest result. For example, a student might have already improved the maximum he/she could have from pre-test to post-test, but dividing it by two for normalization could lower down the actual improvement percentage.
+\noindent It can be possible that the formula that I have used to calculate the result of the pretest or the posttest taking correctness and certainty into account or the improvement of the posttest compared to the pretest might not produce the exact significant data for further statistical analysis and thus can affect the final outcome. For example, now I am subtracting the pretest result from the posttest result and then dividing it by two for normalization to calculate the improvement. But, there might be other ways to define what improvement is relative to the pretest result. For example, a student might have already improved the maximum he/she could have from pretest to posttest, but dividing it by two for normalization could lower down the actual improvement percentage.
 
 \subsubsection{External Validity}\label{subsubsec:externalvalidity}
 \emph{Is the cause and effect relationship I have shown valid in other situations?}
@@ -256,7 +256,7 @@ For ith Question \textit{Q$_{i}$} and group \textit{X} (where X $\in$ \{control(
 
 \textit{RES$_{post(X_i)}$} := \textit{CO$_{post(X_i)}$} $\times$ \textit{CE$_{post(X_i)}$} $\in$ [-1,  1], result for the ith posttest question for X group is between -1 ("absolutely wrong") to 1 ("absolutely right").
 
-\textit{IMP$_{(X_i)}$} := (\textit{RES$_{post(X_i)}$} - \textit{RES$_{pre(X_i)}$})/2 $\in$ [-1,  1], improvement for the ith question for X group from pretest to posttest is between -1 ("absolute negative leaning") to 1 ("absolute positive leaning").
+\textit{IMP$_{(X_i)}$} := (\textit{RES$_{post(X_i)}$} - \textit{RES$_{pre(X_i)}$})/2 $\in$ [-1,  1], improvement for the ith question for X group from pretest to posttest is between -1 ("absolute negative learning") to 1 ("absolute positive learning").
 
 It is important to understand the following points from the above formulas:
 \begin{itemize}
@@ -310,9 +310,9 @@ As five questions were asked, the result can be calculated for each question fro
 \paragraph{Data Analysis}
 After calculating the results i.e., \textit{RES$_{pre(com_i)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Pretest_q1}, \ref{fig:Pretest_q2}, \ref{fig:Pretest_q3}, \ref{fig:Pretest_q4}, and \ref{fig:Pretest_q5} show the density plots of the results for each question. In the plots, the x-axis represents the result calculated from combining both correctness and certainty as described in Section \ref{subsubsec:evaluation_formula} ranging between -1 (absolutely wrong) to 1 (absolutely right). The y-axis represents the density of 39 students lying over the interval. From Figure~\ref{fig:Pretest_q1}, it is possible to see that the distribution of the results is mainly on the positive side i.e., between 0 to 1 for Q1. But for all other questions, the distribution of the results is rather scattered over the interval and does not give any conclusive result to accept or reject the null hypothesis just by looking at these plots.
 
-To gain a better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to only one set of pre-test data, I have used the one-sample t-test.   
+To gain a better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to only one set of pretest data, I have used the one-sample t-test.   
 
-As mentioned earlier, certainty value is also involved in the result calculation. It's value entered by the students ranges from 1 ("I just guessed") to 5 ("I am certain") which corresponds to the interval 0 to 1 considered for calculation. Hence the result of a correct answer with the lowest non-zero certainty value to any question is 0.25. So this hypothesis can be expressed as:   
+As mentioned earlier, certainty value is also involved in the result calculation. Its value entered by the students ranges from 1 ("I just guessed") to 5 ("I am certain") which corresponds to the interval 0 to 1 considered for calculation. Hence, the result of a correct answer with the lowest non-zero certainty value to any question is 0.25. So this hypothesis can be expressed as:   
 
 Null Hypothesis, {H$_{NU1}$}: Mean (\textit{RES$_{pre(com_i)}$}) > 0.25 
 
@@ -346,9 +346,9 @@ These results reject the null hypothesis {H$_{NU1}$}. This indicates that the st
 \end{table}
 
 \subsubsection{Analyzing Hypothesis 2}\label{subsubsec:hypothesis2}
-Hypothesis 2 i.e., \textbf{H$_{OP2}$} and \textbf{H$_{NU2}$} is designed to investigate research question \textbf{RQ 4.1}. This hypothesis deals with the fact whether demon-bx tool has a positive effect on the achievement of corresponding bx-related learning goals. Data for \textbf{RQ 4.1} can be collected from the improvement calculated for control group (\textit{IMP$_{(c_i)}$}) and treated group (\textit{IMP$_{(t_i)}$}) separately. Because both control and treated group have used demon-bx tool (with different environments) before posttest and improvement indicates how much a certain group has improved/learned from pretest to posttest. 
+Hypothesis 2 i.e., \textbf{H$_{OP2}$} and \textbf{H$_{NU2}$} is designed to investigate research question \textbf{RQ 4.1}. This hypothesis deals with the fact whether demon-bx tool has a positive effect on the achievement of corresponding bx-related learning goals. Data for \textbf{RQ 4.1} can be collected from the improvement calculated for the control group (\textit{IMP$_{(c_i)}$}) and the treated group (\textit{IMP$_{(t_i)}$}) separately. Because both control and treated group have used demon-bx tool (with different environments) before posttest and improvement indicates how much a certain group has improved/learned from pretest to posttest. 
 
-As five questions were asked, the improvement can be calculated for each question from the pretest and posttest data separately for control and treated group. 
+As five questions were asked, the improvement can be calculated for each question from the pretest and the posttest data separately for control and treated group. 
 
 \begin{figure}
 	\centering
@@ -431,12 +431,12 @@ As five questions were asked, the improvement can be calculated for each questio
 \end{figure}
 
 \paragraph{Data Analysis}
-After calculating the improvements i.e., \textit{IMP$_{(c_i)}$} and \textit{IMP$_{(t_i)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Imp_Control-q1}, \ref{fig:Imp_Treated-q1}, \ref{fig:Imp_Control-q2}, \ref{fig:Imp_Treated-q2}, \ref{fig:Imp_Control-q3}, \ref{fig:Imp_Treated-q3}, \ref{fig:Imp_Control-q4}, \ref{fig:Imp_Treated-q4}, \ref{fig:Imp_Control-q5}, and \ref{fig:Imp_Treated-q5} show the density plots of the improvements for control group and treated group separately for each question. In the plots, the x-axis represents the improvement as described in Section \ref{subsubsec:evaluation_formula} ranging between -1 ("absolute negative learning") to 1 ("absolute positive learning"). The y-axis represents the density of 21 students in case of the control group and 18 students in case of the treated group lying over the interval.
+After calculating the improvements i.e., \textit{IMP$_{(c_i)}$} and \textit{IMP$_{(t_i)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Imp_Control-q1}, \ref{fig:Imp_Treated-q1}, \ref{fig:Imp_Control-q2}, \ref{fig:Imp_Treated-q2}, \ref{fig:Imp_Control-q3}, \ref{fig:Imp_Treated-q3}, \ref{fig:Imp_Control-q4}, \ref{fig:Imp_Treated-q4}, \ref{fig:Imp_Control-q5}, and \ref{fig:Imp_Treated-q5} show the density plots of the improvements for the control group and the treated group separately for each question. In the plots, the x-axis represents the improvement as described in Section \ref{subsubsec:evaluation_formula} ranging between -1 ("absolute negative learning") to 1 ("absolute positive learning"). The y-axis represents the density of 21 students in case of the control group and 18 students in case of the treated group lying over the interval.
 These density plots show that the improvement values are scattered over the entire interval quite uniformly on both sides of the value 0. But, it is very difficult to say whether the values are more on the positive side or more on the negative side. So it's very hard to accept or reject the null hypothesis just by looking at these plots.
 
-To gain an even better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to one set of improvement data at a time i.e., either the improvement for control group or the improvement of treated group, I have used the one-sample t-test.   
+To gain an even better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to one set of improvement data at a time i.e., either the improvement of the control group or the improvement of the treated group, I have used the one-sample t-test.   
 
-The improvement is always calculated for posttest compared to the pretest. Here also improvement for control group is calculated subtracting control group pretest (\textit{RES$_{pre(c_i)}$}) results from control group posttest (\textit{RES$_{post(c_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Similarly, improvement for treated group is calculated subtracting treated group pretest (\textit{RES$_{pre(t_i)}$}) results from treated group posttest (\textit{RES$_{post(t_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Hence the value less than 0 signifies "negative" improvement and the value greater than 0 signifies "positive" improvement. As two independent groups are involved, this hypothesis can be expressed as:   
+The improvement is always calculated for posttest compared to the pretest. Here also improvement for control group is calculated subtracting control group pretest (\textit{RES$_{pre(c_i)}$}) results from control group posttest (\textit{RES$_{post(c_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Similarly, improvement for treated group is calculated subtracting treated group pretest (\textit{RES$_{pre(t_i)}$}) results from treated group posttest (\textit{RES$_{post(t_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Hence, the value less than 0 signifies "negative" improvement and the value greater than 0 signifies "positive" improvement. As two independent groups are involved, this hypothesis can be expressed as:   
 
 Null Hypothesis, {H$_{NU2}$}: 
 Mean (\textit{IMP$_{(c_i)}$}) < 0 and Mean (\textit{IMP$_{(t_i)}$}) < 0
@@ -445,10 +445,10 @@ Hence, I have included the option (\textit{alternative="greater"}) during the ca
 
 \paragraph{Discussion}
 From the t-test results as shown in Table~\ref{tab:t-test_Imp-control}, it can be seen that the mean value of \textit{IMP$_{(c_i)}$} for all the questions are either less than 0 or close to 0.
-Similarly, from the t-test results as shown in Table~\ref{tab:t-test_Imp-treated}, it can be seen that the mean value of \textit{IMP$_{(t_i)}$} for all the questions are either less than 0 or close to 0. But, the p-values in these cases are on higher side. 
+Similarly, from the t-test results as shown in Table~\ref{tab:t-test_Imp-treated}, it can be seen that the mean values of \textit{IMP$_{(t_i)}$} for all the questions are either less than 0 or close to 0. But, the p-values in these cases are on higher side. 
 
 This result indicates that participants learned negatively after using demon-bx tool. 
-Some improvement can be seen for the treated group compared to the control group in terms of mean values, which indicates that the demon-bx tool is more harmful without carefully designed scenarios (guidance steps for the user). With these results and higher p-values, the data were not significant enough to reject the null hypothesis {H$_{NU2}$}. This shows that for the fact whether demon-bx has a positive effect on the achievement of corresponding learning goals, no conclusive or significant results were obtained.
+Some improvement can be seen for the treated group compared to the control group in terms of mean values, which indicates that demon-bx tool is more harmful without carefully designed scenarios (guidance steps for the user). With these results and higher p-values, the data were not significant enough to reject the null hypothesis {H$_{NU2}$}. This shows that for the fact whether demon-bx has a positive effect on the achievement of corresponding learning goals, no conclusive or significant results were obtained.
 
 \begin{table}[ht]
 	\centering	
@@ -457,15 +457,15 @@ Some improvement can be seen for the treated group compared to the control group
 		\rowcolor[gray]{.8}	
 		\textbf{} & \textbf{Students} & \textbf{Factor} & \textbf{t-value} & \textbf{p-value} & \textbf{mean}\\
 		\hline
-		Q1 & 21 & improvement (control grp) &  -1.7589 & 0.9531 & -0.1904\\
+		Q1 & 21 & improvement (control) &  -1.7589 & 0.9531 & -0.1904\\
 		\hline
-		Q2 & 21 & improvement (control grp) & 0.3841 & 0.3524 & 0.0357\\
+		Q2 & 21 & improvement (control) & 0.3841 & 0.3524 & 0.0357\\
 		\hline
-		Q3 & 21 & improvement (control grp) & -0.9604 & 0.8259 & -0.8928\\
+		Q3 & 21 & improvement (control) & -0.9604 & 0.8259 & -0.8928\\
 		\hline	
-		Q4 & 21 & improvement (control grp) & 0.2071 & 0.419 & 0.0238\\
+		Q4 & 21 & improvement (control) & 0.2071 & 0.419 & 0.0238\\
 		\hline
-		Q5 & 21 & improvement (control grp) & -0.7853 & 0.7793 & -0.8333\\
+		Q5 & 21 & improvement (control) & -0.7853 & 0.7793 & -0.8333\\
 		\hline			
 	\end{tabular}
 	\caption{t-test result showing Improvement (Control Group)}
@@ -479,15 +479,15 @@ Some improvement can be seen for the treated group compared to the control group
 		\rowcolor[gray]{.8}	
 		\textbf{} & \textbf{Students} & \textbf{Factor} & \textbf{t-value} & \textbf{p-value} & \textbf{mean}\\
 		\hline
-		Q1 & 18 & improvement (treated grp) &  -1.5226 & 0.9269 & -0.125\\
+		Q1 & 18 & improvement (treated) &  -1.5226 & 0.9269 & -0.125\\
 		\hline
-		Q2 & 18 & improvement (treated grp) & -2.3739 & 0.9852 & -0.1527\\
+		Q2 & 18 & improvement (treated) & -2.3739 & 0.9852 & -0.1527\\
 		\hline
-		Q3 & 18 & improvement (treated grp) & -0.9578 & 0.5376 & -0.0069\\
+		Q3 & 18 & improvement (treated) & -0.9578 & 0.5376 & -0.0069\\
 		\hline	
-		Q4 & 18 & improvement (treated grp) & 0.8911 & 0.1927 & 0.0486\\
+		Q4 & 18 & improvement (treated) & 0.8911 & 0.1927 & 0.0486\\
 		\hline
-		Q5 & 18 & improvement (treated grp) & -0.6439 & 0.7359 & -0.0625\\
+		Q5 & 18 & improvement (treated) & -0.6439 & 0.7359 & -0.0625\\
 		\hline			
 	\end{tabular}
 	\caption{t-test result showing Improvement (Treated Group)}
@@ -495,16 +495,16 @@ Some improvement can be seen for the treated group compared to the control group
 \end{table}
 
 \subsubsection{Analyzing Hypothesis 3}\label{subsubsec:hypothesis3}
-Hypothesis 3 i.e., \textbf{H$_{OP3}$} and \textbf{H$_{NU3}$} is designed to investigate research question \textbf{RQ 4.2}. This hypothesis deals with the fact whether using demon-bx together with suitable scenarios is more effective than without scenarios. Data for \textbf{RQ 4.2} can be collected by comparing the improvement of the treated group than the control group. Because before appearing in the post-test, the treated group had used demon-bx with scenarios and the control group had used demon-bx without scenarios.
+Hypothesis 3 i.e., \textbf{H$_{OP3}$} and \textbf{H$_{NU3}$} is designed to investigate research question \textbf{RQ 4.2}. This hypothesis deals with the fact whether using demon-bx together with suitable scenarios is more effective than without scenarios. Data for \textbf{RQ 4.2} can be collected by comparing the improvement of the treated group than the control group. Because before appearing in the posttest, the treated group had used demon-bx with scenarios and the control group had used demon-bx without scenarios.
 
-As five questions were asked, the improvement can be calculated for each question from the pretest and posttest data separately for control and treated group.  
+As five questions were asked, the improvement can be calculated for each question from the pretest and the posttest data separately for control and treated group.  
 
 \paragraph{Data Analysis}
 After calculating the improvements for control and treated group separately i.e., \textit{IMP$_{(c_i)}$} and \textit{IMP$_{(t_i)}$} for each question, I used density plots to show their distribution. Figures~\ref{fig:Imp_Control-q1}, \ref{fig:Imp_Treated-q1}, \ref{fig:Imp_Control-q2}, \ref{fig:Imp_Treated-q2}, \ref{fig:Imp_Control-q3}, \ref{fig:Imp_Treated-q3}, \ref{fig:Imp_Control-q4}, \ref{fig:Imp_Treated-q4}, \ref{fig:Imp_Control-q5}, and \ref{fig:Imp_Treated-q5} show the question wise density plots of the improvements for control and treated group. In the plots, the x-axis represents the improvement as described in Section \ref{subsubsec:evaluation_formula} ranging between -1 ("absolute negative learning") to 1 ("absolute positive learning"). The y-axis represents the density of 21 students in case of the control group and 18 students in case of the treated group lying over the interval. These figures show a comparison between the scattering of the improvement values for control and treated group. From these figures, both uniform and non-uniform distribution of the values can be seen on both sides of the value 0. But, for the naked eye, it is impossible to say whether the improvement in the case of treated group is more or the improvement in the case of the control group is more. So it's very hard to accept or reject the null hypothesis just by comparing these plots.
 
 To gain a better understanding of the data, I have further analyzed it with a t-test. As this hypothesis is related to two sets of improvement data i.e., control and treated group, I have used the unpaired two-sample t-test.   
 
-As mentioned earlier, improvement is always calculated for posttest compared to the pretest. Here also improvement for control group is calculated subtracting control group pretest (\textit{RES$_{pre(c_i)}$}) results from control group posttest (\textit{RES$_{post(c_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Similarly, improvement for treated group is calculated subtracting treated group pretest (\textit{RES$_{pre(t_i)}$}) results from treated group posttest (\textit{RES$_{post(t_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Hence the value less than 0 signifies "negative" improvement and the value greater than 0 signifies "positive" improvement. As two independent groups are involved, this hypothesis can be expressed as:   
+As mentioned earlier, improvement is always calculated for posttest compared to the pretest. Here also improvement for control group is calculated subtracting control group pretest (\textit{RES$_{pre(c_i)}$}) results from control group posttest (\textit{RES$_{post(c_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Similarly, improvement for treated group is calculated subtracting treated group pretest (\textit{RES$_{pre(t_i)}$}) results from treated group posttest (\textit{RES$_{post(t_i)}$}) results and then dividing it by two for normalizing it between -1 to 1. Hence, the value less than 0 signifies "negative" improvement and the value greater than 0 signifies "positive" improvement. As two independent groups are involved, this hypothesis can be expressed as:   
 
 Null Hypothesis, {H$_{NU3}$}: Mean (\textit{IMP$_{(c_i)}$}) - Mean (\textit{IMP$_{(t_i)}$}) > 0
 
@@ -513,7 +513,7 @@ Hence, I have included the option (\textit{alternative="less", var.equal=TRUE}) 
 \paragraph{Discussion}
 From the t-test results (all participants) as shown in Table~\ref{tab:t-test_controltreated}, it can be seen that the mean difference of \textit{IMP$_{(c_i)}$} from \textit{IMP$_{(t_i)}$} for question Q2 is higher than 0 but for questions Q1, Q3, Q4, and Q5 are less than 0 with higher p-values. From the t-test results (good students) as shown in Table~\ref{tab:t-test_controltreated_good}, it can be seen that the mean difference of \textit{IMP$_{(c_i)}$} from \textit{IMP$_{(t_i)}$} for all questions are either less than 0 or very close to 0 with varying range of p-values.
 
-These results indicate that some positive effect can be seen for the treated group compared to the control group and this improvement in case of the good students are even better. But, with varying or higher p-values, the data were not significant enough to reject the null hypothesis {H$_{NU3}$}. This might be because of the fact that the scenarios are not designed for all types of audience. For example, good students or the students with prior knowledge about bx might comprehend the scenarios better than the average students or the students with no prior knowledge about bx. This shows that with suitable scenarios some positive learning can be achieved, but this is not evident in all cases and I was not able to conclude this with statistical significance.
+These results indicate that some positive effect can be seen for the treated group compared to the control group and this improvement in the case of the good students are even better. But, with varying or higher p-values, the data were not significant enough to reject the null hypothesis {H$_{NU3}$}. This might be because of the fact that the scenarios are not designed for all types of audience. For example, good students or the students with prior knowledge about bx might comprehend the scenarios better than the average students or the students with no prior knowledge about bx. This shows that with suitable scenarios some positive learning can be achieved, but this is not evident in all cases and I was not able to conclude this with statistical significance.
 
 \begin{table}[ht]
 	\centering	
