--- a/Final Documentation/RelatedWork/RelatedWork.tex
+++ b/Final Documentation/RelatedWork/RelatedWork.tex
@@ -36,10 +36,10 @@ A rich set of bx examples repository \cite{bx-examples} has been created based o
 	\label{fig:Bx_ExampleRepo}
 \end{figure}
 
-Figure~\ref{fig:Bx_ExampleRepo} shows a screenshot of the example repositories listed alphabetically on the bx community web-site (\url{http://bx-community.wikidot.com/}). A user can find relevant information about the examples on the respective web pages. Some of the examples are very well documented along with class diagrams, activity diagrams, object diagrams etc. and source code of a few examples are available as well.
+Figure~\ref{fig:Bx_ExampleRepo} shows a screenshot of the example repositories listed alphabetically on the bx community web-site (\url{http://bx-community.wikidot.com/}). A user can find relevant information about the examples on the respective web pages. Some examples are very well documented along with class diagrams, activity diagrams, object diagrams etc. and source code of a few examples are available as well.
 
 \subsection{Discussion}\label{subsec:discussion}
-In this section, I will discuss the related problems associated with each of the related work discussed in the previous sections and a comparison of these related work with the Demon-BX tool.
+In this section, I will discuss the related problems associated with each of the related work discussed in the previous sections and a comparison of these related work with the demon-bx tool.
 
 \subsubsection{Related Problems}\label{subsubsec:relatedproblems}
 Associated problems that I found with the above discussed related work are described in the following paragraphs: 
@@ -52,12 +52,12 @@ There is very limited guidance provided concerning what the user can do and try 
 The existing demonstrator is based on a rather technical example that might not be relevant, interesting, or convincing for a large group of potential bx users.
 
 \paragraph{Virtual Machines}
-For security reasons, web-based virtual machine, e.g., SHARE is not like other web portals where a user need to simply sign-up and can host/create/access data, rather it includes a series of request-grant cycle for getting access to an environment and hosting/managing data. Also, some actions require special authorization and take time to complete the whole process.
+For security reasons, web-based virtual machine, e.g., SHARE is not like other web portals where a user needs to simply sign-up and can host/create/access data, rather it includes a series of request-grant cycle for getting access to an environment and hosting/managing data. Also, some actions require special authorization and take time to complete the whole process.
 
 The user needs at least 3 Gigabyte or more space on his/her local system for configuring the virtual machine i.e., VM Virtual Box depending on the requirement of the environment, which sometimes creates an overhead.
 
 \paragraph{Handbooks \& Tutorials}
-As described in handbooks and tutorials, installation process is time consuming and requires technical expertise as the user typically has to setup and install the tool. Required knowledge is too tool/area specific and it can be challenging if the user is not familiar with the technological space, e.g., the user must possess knowledge about Java and Eclipse framework or a Java programmer might find the tool chain for Haskell unfamiliar.
+As described in handbooks and tutorials, the installation process is time consuming and requires technical expertise as the user typically has to setup and install the tool. Required knowledge is too tool/area specific and it can be challenging if the user is not familiar with the technological space, e.g., the user must possess knowledge about Java and Eclipse framework or a Java programmer might find the tool chain for Haskell unfamiliar.
 
 Steps to get the example running needed technical expertise, e.g., In some cases, domain-specific knowledge includes mathematics and specific coding language. What is showcased and discussed is tied to a specific technological space and might not be easily transferable to other bx approaches and also, not very helpful to understand what bx is before deciding which bx tool to use.
 
@@ -71,7 +71,7 @@ of time and requires technical expertise to set-up the framework and get the exa
 \subsubsection{Comparison}\label{subsubsubsec:comparison}
 Associated problems as discussed in Section \ref{subsubsec:relatedproblems} gave me the foundation while forming the requirements for my demonstrator. To overcome these problems, I took the shortcomings from each related work and designed the functional and non-functional requirements. 
 
-Based on the requirements described in chapter \ref{sec:requirements} and considering the problems as discussed in Section \ref{subsubsec:relatedproblems}, Table~\ref{tab:comparison_relatedwork} illustrates a comparison between all the related work discussed above with the Demon-BX tool. "\checkmark" denotes the fulfillment of the requirement, "\ding{55}" denotes the non-fulfillment of the requirement, and "?" denotes insufficient information about the requirement. This comparison table clearly shows that Demon-BX tool overcomes all the problems associated with these related work.
+Based on the requirements described in chapter \ref{sec:requirements} and considering the problems as discussed in Section \ref{subsubsec:relatedproblems}, Table~\ref{tab:comparison_relatedwork} illustrates a comparison between all the related work discussed above with demon-bx tool. "\checkmark" denotes the fulfillment of the requirement, "\ding{55}" denotes the non-fulfillment of the requirement, and "?" denotes insufficient information about the requirement. This comparison table clearly shows that demon-bx tool overcomes all the problems associated with these related work.
 
 \begin{sidewaystable}
 	\centering
