--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -23,7 +23,7 @@ During the process of manipulation of models' data before the initiating the syn
 A user can reset the models' states and the views at any time during the process and start from the beginning.
 
 \subsection{Non-Functional}\label{subsec:nonfunctionalreq}
-Non-functional requirements cover all the remaining requirements which are not covered by the functional requirements. Hence it describes all the quality attributes of a system \cite{funcandnonfuncreq}.
+Non-functional requirements cover all the remaining requirements which are not covered by the functional requirements. Hence, it describes all the quality attributes of a system \cite{funcandnonfuncreq}.
 
 Following are some of the non-functional end results (referred to as \textbf{NR} from now on) I have implemented in the demonstrator:
 
@@ -37,7 +37,7 @@ The demonstrator should be able to attract more users by exploiting the features
 
 \textbf{\textit{NR3}}: Simple example
 
-The user is going to try/use the demonstrator based on an example. This example should rather be less complex and less technical to understand to create interest and convince more target audience. Also, the user should be able to relate to the bx concepts through the example.
+The user is going to try/use the demonstrator based on an example. This example should rather be less complex and less technical in nature to create interest and convince more target audience. Also, the user should be able to relate to the bx concepts through the example.
 
 \textbf{\textit{NR4}}: User guidance
 
@@ -49,7 +49,7 @@ Rather, being just an online playing tool, the user should learn certain bx conc
 
 \textbf{\textit{NR6}}: Public access
 
-The demonstrator should be accessible worldwide to all. Being a demonstrator for a bx tool, it's accessibility shouldn't be restricted to a few groups. rather, it should be accessible to all whoever wants to use the tool.
+The demonstrator should be accessible worldwide to all. Being a demonstrator for a bx tool, its accessibility shouldn't be restricted to a few groups. Rather, it should be accessible to all whoever wants to use the tool.
 
 \textbf{\textit{NR7}}: Robust
 
